--- a/ml_service/requirements.txt
+++ b/ml_service/requirements.txt
@@ -6,5 +6,6 @@ transformers>=4.36.0
 torch>=2.1.0
 typing-extensions
 python-multipart
+protobuf
 # For spacy model
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
