--- a/ml_service/Dockerfile
+++ b/ml_service/Dockerfile
@@ -22,4 +22,4 @@ EXPOSE 7860
 
 # Command to run the application
 # We use uvicorn and host on 0.0.0.0, port 7860
-CMD ["uvicorn", "main.py:app", "--host", "0.0.0.0", "--port", "7860"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "7860"]
